fix iphone12 spacing for banner, fix robam transparency issue

--- a/src/component/Banner.css
+++ b/src/component/Banner.css
@@ -50,13 +50,13 @@ display:none;
         .banner_mt1_responsive { margin-top:0; }
         .banner_mt2_responsive { margin-top:0; }
         .banner_mt3_responsive { margin-top:0; }
-        .banner_pb0_responsive { padding-bottom:0; }
-        .banner_pb1_responsive { padding-bottom:0; }
+        .banner_pb0_responsive { padding-bottom:2px; }
+        .banner_pb1_responsive { padding-bottom:1px; }
         .banner_pb2_responsive { padding-bottom:0; }
         .banner_pb3_responsive { padding-bottom:0; }
-        .banner_pt0_responsive { padding-top:0px; }
+        .banner_pt0_responsive { padding-top:2px; }
         .banner_pt1_responsive { padding-top:13px; }
-        .banner_pt2_responsive { padding-top:19px; }
+        .banner_pt2_responsive { padding-top:17px; }
         .banner_pt3_responsive { padding-top:10px; }
 .box-1 {
 width: 100%;
